Use JavaScript to determine appropriate widths and prevent wrapping

--- a/static/scss/modules/_slider.scss
+++ b/static/scss/modules/_slider.scss
@@ -9,16 +9,16 @@
 	  overflow-x: scroll;
 	}
 	.holder {
-	  width: 300%;
+	  width: 400%;
 	}
 	.slide {
 	  float: left;
-	  width: (100 / 3) * 1%;
+	  width: (100 / 4) * 1%;
 	  height: 100vh;
 	  position: relative;
-      background: $dark-grey center center;
+    background: $dark-grey center center;
 	  background-position: -100px 0;
-      background-size: cover;
+    background-size: cover;
 	}
 	.slide-text {
 	  position: absolute;
@@ -31,23 +31,6 @@
 		text-align: center;
 		width: 100%;
 	}
-
-
-
-	// ---- individual slides ----
-
-	// #slide-0 {
-	//   background: url(../img/slide-0.jpg) center center;
-	// 	background-size: cover;
-	// }
-	// #slide-1 {
-	//   background: url(http://farm8.staticflickr.com/7384/8730654121_05bca33388_z.jpg) center center;
-	// 	background-size: cover;
-	// }
-	// #slide-2 {
-	//   background: url(../img/slide-2.jpg) center center;
-	// 	background-size: cover;
-	// }
 
 
 
